--- a/src/main/resources/templates/Input.html
+++ b/src/main/resources/templates/Input.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--/*@thymesVar id="form" type="ca.javateacher.loancalculator.model.LoanForm"*/-->
-<!--/*@thymesVar id="errors" type="java.util.ArrayList<java.lang.String>"*/-->
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -13,7 +11,7 @@
 <main>
     <h1>Input Loan Data</h1>
     <form method="get"
-          th:action="@{Calculate.do}" action="Output.html"
+          th:action="@{process}" action="Output.html"
           th:object="${form}">
         <div th:if="${#fields.hasErrors('*')}">
             <h3 class="error">Input Errors</h3>
